# segurauto

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.production.yml  docker-compose.yml
ai-service/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
ai-service/app/: main.py
ai-service/app/ai/: __init__.py
ai-service/app/business/: __init__.py  ai_port.py  ports.py  worker.py
ai-service/app/eval/: __init__.py  render.py  seed.py
ai-service/app/shared/: __init__.py  config.py  database.py  guards.py  health.py  metrics.py  observability.py  qualification.py  security.py
ai-service/migrations/: env.py
ai-service/migrations/versions/: 0001_initial.py  0002_worker_backoff.py  0003_auth_otp.py  0004_chat.py  0005_quotes.py  0006_integration_events.py  0007_f6_actions.py  0008_handoff_confirmed.py
ai-service/tests/: test_health.py
ai-service/tests/integration/: conftest.py  test_auth_flow.py  test_capture_flow.py  test_chat_flow.py  test_eval_journey.py  test_f6_actions.py  test_rag_flow.py  test_support_flow.py  test_worker_flow.py
ai-service/tests/real/: test_email_real.py  test_llm_real.py
ai-service/tests/unit/: test_adapters_contract.py  test_ai_port.py  test_architecture.py  test_chat_converse.py  test_chat_errors.py  test_converse_agent.py  test_domain_lead.py  test_eval_render.py  test_f6_actions.py  test_llm_providers.py  test_masking.py  test_notification_smtp.py  test_observability.py  test_providers.py  test_qualification_agent.py  test_qualify_api.py  test_rag.py  test_security.py  test_slots.py  (+1 more)
(+131 files in other folders)
