[project]
name = "segurauto-ai-service"
version = "0.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Bloco de CSS inline da página de avaliação — regras densas numa linha por legibilidade do estilo.
"app/eval/render.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
